--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "classnames": "^2.3.2",
         "next": "^13.4.6",
         "react-redux": "^8.1.1",
+        "react-toastify": "^9.1.3",
         "sass": "^1.63.6",
         "uuid": "^9.0.0"
     },
