--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "next": "^13.4.6",
         "react-redux": "^8.1.1",
         "react-toastify": "^9.1.3",
+        "redux-persist": "^6.0.0",
         "sass": "^1.63.6",
         "uuid": "^9.0.0"
     },
